dev/_sources/auto_examples/plot_tensor.rst.txt


.. _sphx_glr_auto_examples_plot_tensor.py:


Basic tensor operations
=======================

Example on how to use :mod:`tensorly` to perform basic tensor operations.




.. code-block:: python

    Basic tensor operations
    =======================

    Example on how to use :mod:`tensorly` to perform basic tensor operations.

    """
    import numpy as np
    import tensorly as tl
    from tensorly.testing import assert_array_equal




.. code-block:: pytb

    Traceback (most recent call last):
      File "/home/travis/build/tensorly/tensorly/examples/plot_tensor.py", line 1
        Basic tensor operations
              ^
    SyntaxError: invalid syntax




A tensor is simply a numpy array



.. code-block:: python

    tensor = tl.tensor(np.arange(24).reshape((3, 4, 2)))
    print('* original tensor:\n{}'.format(tensor))


Unfolding a tensor is easy



.. code-block:: python

    for mode in range(tensor.ndim):
        print('* mode-{} unfolding:\n{}'.format(mode, tl.unfold(tensor, mode)))


Re-folding the tensor is as easy:



.. code-block:: python

    for mode in range(tensor.ndim):
        unfolding = tl.unfold(tensor, mode)
        folded = tl.fold(unfolding, mode, tensor.shape)
        assert_array_equal(folded, tensor)

**Total running time of the script:** ( 0 minutes  0.000 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: plot_tensor.py <plot_tensor.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: plot_tensor.ipynb <plot_tensor.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
